--- a/src/blocks/element/__group/element__group.css
+++ b/src/blocks/element/__group/element__group.css
@@ -1,8 +1,10 @@
 .element__group {
     max-width: 246px;
     width: 100%;
+    max-height:35px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 22px 15px 28px 21px;
 }
 
