--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,9 +1,16 @@
 .profile__avatar {
-    max-width: 120px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
-    margin-right: 30px;
+    transition: opacity 0.5s ease;
+    position: relative;
+    object-fit: cover;
+    z-index: 1;
 }
-
+.profile__avatar:hover{
+    opacity: 0.2;
+    cursor: pointer;
+}
 @media screen and (max-width:880px) {
     .profile__avatar {
         margin-left: 10px;
